feat: some update

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -5,10 +5,10 @@ order: -1
 sidebar: true
 ---
 
-import MapGL from './';
+import MapGLExample from './examples/MapGLExample';
 
 # MapGL Component
 
 ## MapGL
 
-<MapGL />
+<MapGLExample />
